--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.6",
+    "javascript-time-ago": "^2.5.10",
+    "next": "12.3.4",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
   "devDependencies": {
+    "@types/node": "22.5.0",
+    "@types/react": "18.3.4",
     "eslint": "9.9.1",
-    "eslint-config-next": "14.2.6"
+    "eslint-config-next": "14.2.6",
+    "typescript": "5.5.4"
   }
 }
